--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,9 @@
-[submodule "lg_pkgs/lgsvl_msgs"]
+[submodule "lgsvl_msgs"]
 	path = lgsvl_pkgs/lgsvl_msgs
 	url = ../lgsvl_msgs.git
 	branch = protobuf
+
+[submodule "safety_layer"]
+	path = modules/safety_layer
+	url = ../../safety_layer/cyber_module.git
+	branch = devel
